<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_uid_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_uid_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/login_uid"
            android:singleLine="true"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/til_uid_login"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_pwd_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:imeActionId="1"
            android:imeActionLabel="@string/login"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_identity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/til_pwd_login">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_doctor_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="18dp"
            android:text="@string/doctor" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_patient_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="18dp"
            android:layout_marginStart="20dp"
            android:text="@string/patient" />
    </RadioGroup>

    <com.depressionscreening.yjj.view.SubmitButton
        android:id="@+id/submit_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/rg_identity_login"
        style="@style/ButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>