<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_uid_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_uid_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/login_uid"
            android:singleLine="true"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pwd_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/til_uid_register"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_pwd_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/til_pwd_register" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:nextFocusDown="@id/np_age_register"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/til_username_register"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="#555555"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/np_age_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:descendantFocusability="blocksDescendants"
            />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_sex_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_male_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="18dp"
            android:button="@drawable/radio_male_selector"
            android:text="@string/male"
            android:textColor="@color/radio_text_color_selector"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_female_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="18dp"
            android:layout_marginStart="20dp"
            android:button="@drawable/radio_female_selector"
            android:text="@string/female"
            android:textColor="@color/radio_text_color_selector" />
    </RadioGroup>

    <com.depressionscreening.yjj.view.SubmitButton
        android:id="@+id/submit_button_register"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/rg_sex_register"
        tools:layout_editor_absoluteX="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>